--- a/lattice_and_optics.ipynb
+++ b/lattice_and_optics.ipynb
@@ -105,7 +105,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2e77be4ecf74458960c4ec33b4364b3",
+       "model_id": "192b21cbd3e6405b83c852b3b28db846",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,7 +157,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7b89b4a879a4da0aff53022fcf72993",
+       "model_id": "b12292a7510747e2846c162f3c63eca0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f689283b4e340f890b1d756f4b52cb7",
+       "model_id": "d7d0589e777e4e7c82b3d5ae13eb68a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "8ff93872-f9cf-47a2-bdef-3e9824e33429",
    "metadata": {},
    "outputs": [],
@@ -280,20 +280,21 @@
     "half_ring = (long_straight\n",
     "             + arc\n",
     "             + short_straight\n",
-    "             - arc)\n",
+    "             - arc # mirror symmetric lattice\n",
+    "            )\n",
     "ring = 2 * half_ring"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "c563e868-5438-403d-8538-6339519a2615",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4db55e9a5854b58bc68e719c2824aee",
+       "model_id": "7c2f1fd114814c4aa522ed4541a4daa9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,12 +331,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "853848d0-1875-4f65-8e1c-2afeec878a91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ring.replace_all_repeated_elements()"
+    "ring.replace_all_repeated_elements()"
    ]
   },
   {
@@ -348,50 +349,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "9837083d-16c2-4e5a-92cc-e0044095fde5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Table: 99 rows, 11 cols\n",
-       "name                   s element_type isthick isreplica parent_name iscollective       s_start ...\n",
-       "drift_13.0             0 Drift           True     False None               False             0\n",
-       "mid.lss.0              1 Marker         False     False None               False             1\n",
-       "drift_14.0             1 Drift           True     False None               False             1\n",
-       "drift_1.0              2 Drift           True     False None               False             2\n",
-       "qfa.0             2.2125 Quadrupole      True     False None               False        2.2125\n",
-       "drift_2.0         2.5625 Drift           True     False None               False        2.5625\n",
-       "mb.0              2.9875 RBend           True     False None               False        2.9875\n",
-       "drift_3.0         4.6375 Drift           True     False None               False        4.6375\n",
-       "qd.0              5.1175 Quadrupole      True     False None               False        5.1175\n",
-       "drift_4.0         5.4675 Drift           True     False None               False        5.4675\n",
-       "...\n",
-       "drift_5.3        63.0875 Drift           True     False None               False       63.0875\n",
-       "mb.14            63.3675 RBend           True     False None               False       63.3675\n",
-       "drift_4.3        65.0175 Drift           True     False None               False       65.0175\n",
-       "qd.7             65.7725 Quadrupole      True     False None               False       65.7725\n",
-       "drift_3.3        66.1225 Drift           True     False None               False       66.1225\n",
-       "mb.15            66.6025 RBend           True     False None               False       66.6025\n",
-       "drift_2.3        68.2525 Drift           True     False None               False       68.2525\n",
-       "qfa.7            68.6775 Quadrupole      True     False None               False       68.6775\n",
-       "drift_1.3        69.0275 Drift           True     False None               False       69.0275\n",
-       "_end_point         69.24                False     False None               False         69.24"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tt = ring.get_table()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "3d4613b5-b5f2-4aca-bfcf-8cefc69e46dd",
    "metadata": {},
    "outputs": [
@@ -426,7 +394,7 @@
        "qfa.7       68.6775       68.8525       69.0275"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,14 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "23f562ae-09b3-43f3-962b-f285c0cf0097",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a70426eac0b043bab08ac7e046804ee0",
+       "model_id": "2f08381821fc4a70b1442a168e18925a",
        "version_major": 2,
        "version_minor": 0
       },
