--- a/notebook_00_lattice_design.ipynb
+++ b/notebook_00_lattice_design.ipynb
@@ -105,7 +105,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "623a5a2ce1064697805d9264e97b5821",
+       "model_id": "994865ad361b4f26a4140fd26035f85d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,7 +157,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c11a8c86a6284dfa9b5e0a546f617c61",
+       "model_id": "0a9a4b2f2c7d43fc8eb783e4d5c7e6c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "242e816774124cfa9d38c0b0f7968551",
+       "model_id": "de419b5d74124d8399bd0afa95c36934",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c664b4fe929447a83f3b39d4ef7f466",
+       "model_id": "90431e718a0243eba29da6f135433c83",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +414,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb156984e17843309b9271e3022ffa51",
+       "model_id": "83f16131356d4f6f963845581ce6a6af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -477,7 +477,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cc0fb56c939475e9a3ca02e5e858bfe",
+       "model_id": "d455856556a34457a45815519fcb9033",
        "version_major": 2,
        "version_minor": 0
       },
@@ -506,7 +506,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e26a4b6fc0cc424d9e47ccd3e710f9ae",
+       "model_id": "d4b4b4a3bad446099ff89817c0724d61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -573,6 +573,8 @@
       "#  vars['ksf']._expr is None\n",
       "\n",
       "#  vars['ksf']._find_dependant_targets()\n",
+      "   vars['ksf.2']\n",
+      "   element_refs['msf.2'].k2\n",
       "   vars['ksf.1']\n",
       "   element_refs['msf.1'].k2\n",
       "\n"
@@ -581,16 +583,64 @@
    ],
    "source": [
     "# Entities contrilled by one knob\n",
-    "env.info('ksx')"
+    "env.info('ksf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f2649bab-3e5b-4d81-bb82-5c1928b6cb23",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element of type:  Sextupole\n",
+      "name                value                                   expr         \n",
+      "k2                  0.0                                     vars['ksf.1']\n",
+      "k2s                 0.0                                     None         \n",
+      "length              0.1                                     None         \n",
+      "order               5                                       None         \n",
+      "inv_factorial_order 0.008333333333333333                    None         \n",
+      "knl                 [0. 0. 0. 0. 0. 0.]                     None         \n",
+      "ksl                 [0. 0. 0. 0. 0. 0.]                     None         \n",
+      "edge_entry_active   0                                       None         \n",
+      "edge_exit_active    0                                       None         \n",
+      "_sin_rot_s          -999.0                                  None         \n",
+      "_cos_rot_s          -999.0                                  None         \n",
+      "_shift_x            0.0                                     None         \n",
+      "_shift_y            0.0                                     None         \n",
+      "_shift_s            0.0                                     None         \n",
+      "_internal_record_id RecordIdentifier(buffer_id=0, offset=0) None         \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inspect knob controlling one magnet\n",
+    "env.info('msf.1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9fd9fed8-4c79-4315-a9a1-68b3b658a17f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save to json file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c53aa10e-b347-4fd5-a994-0e8d2911520b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env['ring'] = ring\n",
+    "env.to_json('pimm.json')"
+   ]
   }
  ],
  "metadata": {
