--- a/notebook_00_lattice_design.ipynb
+++ b/notebook_00_lattice_design.ipynb
@@ -54,7 +54,9 @@
     "env['l_mb'] = 1.65\n",
     "env['l_mq'] = 0.35\n",
     "\n",
-    "env.vars.default_to_zero = True\n",
+    "env.vars.default_to_zero = True # Undefined variables in env are automatically \n",
+    "                                # set to zero.\n",
+    "\n",
     "env.new('mb', xt.RBend,      length='l_mb', angle='ang_mb', k0_from_h=True)\n",
     "env.new('mq', xt.Quadrupole, length='l_mq');"
    ]
@@ -105,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "994865ad361b4f26a4140fd26035f85d",
+       "model_id": "c7182a9e87574f869b452e81ce338084",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a9a4b2f2c7d43fc8eb783e4d5c7e6c6",
+       "model_id": "68b89501c22a4b59a2e4147b75361d97",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +214,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de419b5d74124d8399bd0afa95c36934",
+       "model_id": "1d220d485fd84a4687e24d578704b52a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90431e718a0243eba29da6f135433c83",
+       "model_id": "aac57a7d0fa14f0e8922ef01ce3e3072",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +416,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83f16131356d4f6f963845581ce6a6af",
+       "model_id": "96d10614e5894b0bb44e4d208eb8bcb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -477,7 +479,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d455856556a34457a45815519fcb9033",
+       "model_id": "09c129a052e342c2b813b7aea7a28913",
        "version_major": 2,
        "version_minor": 0
       },
@@ -506,7 +508,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4b4b4a3bad446099ff89817c0724d61",
+       "model_id": "3e40a54796454366a3ed2f29f0a6c3ff",
        "version_major": 2,
        "version_minor": 0
       },
