--- a/notebook_00_lattice_design.ipynb
+++ b/notebook_00_lattice_design.ipynb
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "944d925442fe4877a8abc8ab2b5742da",
+       "model_id": "3fc186d0ff194600b4071d16e4cda862",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3bedcadf1eac4a91815d48298d82a365",
+       "model_id": "27d57631190c4ab78d765066ea287b68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,7 +214,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0226aa75e8f944e7a59bd473d6c06a38",
+       "model_id": "6941cf90d274462a9b8af07f7e1ee09a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13f4ef498ce5490b99df351bc24ea291",
+       "model_id": "d92098a0808e406ca4b9ad4095ac8252",
        "version_major": 2,
        "version_minor": 0
       },
@@ -416,7 +416,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c0da7e9780d41548650267ce609307c",
+       "model_id": "8ef785365cb04426896535b428742b32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,7 +479,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0cb88577962483d9a9e1d814eaf45ee",
+       "model_id": "26cb3f1718fe4826a55ee9a8c32759f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -508,7 +508,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93f3d269bdbf4c26bffd187e8154d3cf",
+       "model_id": "69c0182330d6463e8bf6830b5be27800",
        "version_major": 2,
        "version_minor": 0
       },
@@ -640,7 +640,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63bc7e01905c4d8992ecf53782299f6b",
+       "model_id": "72c181d34abe42cd9c91643aab800fa8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -653,7 +653,7 @@
     }
    ],
    "source": [
-    "env.new('rf1', xt.Cavity)\n",
+    "env.new('rf1', xt.Cavity, voltage='vrf', frequency='frf')\n",
     "ring.insert('rf1', at=0.5, from_='qfa.3@start')"
    ]
   },
@@ -666,7 +666,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf1e67fb67144d00aec7941511b49f7c",
+       "model_id": "67f9f4bdfca647f4a99493377c4b7544",
        "version_major": 2,
        "version_minor": 0
       },
