--- a/notebook_01_optics_matching.ipynb
+++ b/notebook_01_optics_matching.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd5ca55ad1e2404ab2c08c4691e5aeb0",
+       "model_id": "8ab1caa2d4fb4f0bad964ea0663c52f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +164,7 @@
     {
      "data": {
       "text/plain": [
-       "<xtrack.twissplot.TwissPlot object at 0x1699a6390>"
+       "<xtrack.twissplot.TwissPlot object at 0x316367150>"
       ]
      },
      "execution_count": 7,
@@ -174,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15834a8565aa4e3b90376f570159b68e",
+       "model_id": "a45e999d13de482a99a07b481089456d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "<xtrack.twissplot.TwissPlot object at 0x169bebd50>"
+       "<xtrack.twissplot.TwissPlot object at 0x3164b7ed0>"
       ]
      },
      "execution_count": 14,
@@ -366,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef11e84ed9f849c49acf2068d99f3506",
+       "model_id": "60dfa91054e941bcb1974a04f0fcb641",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,7 +479,7 @@
     {
      "data": {
       "text/plain": [
-       "<xtrack.twissplot.TwissPlot object at 0x31c2b6950>"
+       "<xtrack.twissplot.TwissPlot object at 0x317dab810>"
       ]
      },
      "execution_count": 18,
@@ -489,7 +489,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "156f823afee14a14aa2ddd9174b6a073",
+       "model_id": "19e408f0a5db4bc8b539c5e8f8fcb14b",
        "version_major": 2,
        "version_minor": 0
       },
