--- a/notebook_01_optics_matching.ipynb
+++ b/notebook_01_optics_matching.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d2f2aa69ea44ef08626d51bc96e6c23",
+       "model_id": "6bb09361f5554089a34efd62396af152",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +164,7 @@
     {
      "data": {
       "text/plain": [
-       "<xtrack.twissplot.TwissPlot object at 0x16a659990>"
+       "<xtrack.twissplot.TwissPlot object at 0x153f65990>"
       ]
      },
      "execution_count": 7,
@@ -174,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7311487d42941dead106d8e6e9df9de",
+       "model_id": "d789f5ad48d246e1b5190480eee7cf93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "<xtrack.twissplot.TwissPlot object at 0x17778e610>"
+       "<xtrack.twissplot.TwissPlot object at 0x156964190>"
       ]
      },
      "execution_count": 14,
@@ -366,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54c799ba1fe349ef997c252b5d6d04e3",
+       "model_id": "fbc09e34915a44a2aef8fb31dca21642",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,7 +479,7 @@
     {
      "data": {
       "text/plain": [
-       "<xtrack.twissplot.TwissPlot object at 0x302dd0190>"
+       "<xtrack.twissplot.TwissPlot object at 0x156b6db90>"
       ]
      },
      "execution_count": 18,
@@ -489,7 +489,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7ed30eae9f845edb454ba7580b51ea8",
+       "model_id": "79ed7512c96249649b7254a1a836a1a1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -572,7 +572,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matching: model call n. 35 penalty = 6.3598e-08              \r"
+      "Matching: model call n. 36 penalty = 6.0567e-08              \r"
      ]
     }
    ],
@@ -590,10 +590,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Target status:               nalty = 6.3598e-08              \n",
+      "Target status:               nalty = 6.0567e-08              \n",
       "id state tag   tol_met       residue   current_val    target_val description                          \n",
-      "0  ON    chrom    True  -5.82126e-08    -0.0100001         -0.01 'dqx', val=-0.01, tol=0.001, weight=1\n",
-      "1  ON    chrom    True   2.56137e-08   -0.00999997         -0.01 'dqy', val=-0.01, tol=0.001, weight=1\n"
+      "0  ON    chrom    True  -6.05663e-08    -0.0100001         -0.01 'dqx', val=-0.01, tol=0.001, weight=1\n",
+      "1  ON    chrom    True  -1.96797e-10         -0.01         -0.01 'dqy', val=-0.01, tol=0.001, weight=1\n"
      ]
     }
    ],
@@ -642,7 +642,7 @@
     {
      "data": {
       "text/plain": [
-       "{'ksf': 0.5853217145965635, 'ksd': -2.14770763170983}"
+       "{'ksf': 0.5853219204643684, 'ksd': -0.7811929408248136}"
       ]
      },
      "execution_count": 24,
@@ -667,8 +667,8 @@
        "{'kqfa': 0.3370599717739164,\n",
        " 'kqfb': 0.5462953319567254,\n",
        " 'kqd': -0.5876756866270778,\n",
-       " 'ksf': 0.5853217145965635,\n",
-       " 'ksd': -2.14770763170983}"
+       " 'ksf': 0.5853219204643684,\n",
+       " 'ksd': -0.7811929408248136}"
       ]
      },
      "execution_count": 25,
