--- a/notebook_00_lattice_design.ipynb
+++ b/notebook_00_lattice_design.ipynb
@@ -5,7 +5,15 @@
    "execution_count": 1,
    "id": "b6499c1c-8f4e-4115-9f9c-116aaf62c937",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib widget"
    ]
@@ -107,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28257efb98934ff8bb0282d8d359463f",
+       "model_id": "77c36225b1e645e49d19dc38d84a9a7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0bde214a3d94e708463eba434512eb6",
+       "model_id": "7ff940ec262b4ddab577fab07a61bdf4",
        "version_major": 2,
        "version_minor": 0
       },
