--- a/notebook_05_formats.ipynb
+++ b/notebook_05_formats.ipynb
@@ -34,12 +34,12 @@
    "metadata": {},
    "source": [
     "This is like in MAD-X. The lattice and the strengths are defined as pyhon scripts (which can include logic, comments, etc.).\n",
-    "It works well also on large lattices, see for example [lhc_seq.py](https://raw.githubusercontent.com/xsuite/xtrack/refs/heads/main/examples/lhc_native_python/lhc_seq.py) (we plan to generate these files directly from the layout database and make them available in the acc-models repository)."
+    "It works well also on large lattices. (we plan to generate these files directly from the layout database and make them available in the acc-models repository)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c5335d08-6120-4f36-84cb-58f3590e0abd",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a7582b10-408e-40f7-9922-7aa59cf6b0f6",
    "metadata": {},
    "outputs": [
@@ -62,17 +62,17 @@
       "text/plain": [
        "TwissTable: 8 rows, 5 cols\n",
        "name              s          betx          bety            dx\n",
-       "qfa.0        2.2125       9.53142       4.10532   1.80855e-05\n",
-       "qfa.1        8.1525       12.3793       4.86072       2.47195\n",
-       "qfa.2       28.1175        12.995       4.44476       2.73962\n",
-       "qfa.3       34.0575       9.24421       4.54585   1.77093e-05\n",
-       "qfa.4       36.8325       9.53142       4.10532   1.80813e-05\n",
-       "qfa.5       42.7725       12.3793       4.86072       2.47195\n",
-       "qfa.6       62.7375        12.995       4.44476       2.73962\n",
-       "qfa.7       68.6775       9.24421       4.54585   1.77056e-05"
+       "qfa.0        2.2125       9.53215        4.1095    0.00134187\n",
+       "qfa.1        8.1525       12.3783       4.88354       2.47263\n",
+       "qfa.2       28.1175       12.9938       4.46877       2.74029\n",
+       "qfa.3       34.0575        9.2449       4.54986    0.00131426\n",
+       "qfa.4       36.8325       9.53215        4.1095    0.00134187\n",
+       "qfa.5       42.7725       12.3783       4.88354       2.47263\n",
+       "qfa.6       62.7375       12.9938       4.46877       2.74029\n",
+       "qfa.7       68.6775        9.2449       4.54986    0.00131425"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,30 +92,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9ef753b8-ade4-49b7-9bbc-443b59b00947",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ead34d96fd8d494c873484e47a19aaad",
+       "model_id": "dec2c50b2ef744da9252e2c38726468f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading line from dict:   0%|          | 0/145 [00:00<?, ?it/s]"
+       "Loading line from dict:   0%|          | 0/83 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done loading line from dict.           \n"
-     ]
     }
    ],
    "source": [
@@ -125,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3321a27c-fd25-4753-831f-f13a0bceed10",
    "metadata": {},
    "outputs": [
@@ -134,17 +127,17 @@
       "text/plain": [
        "TwissTable: 8 rows, 5 cols\n",
        "name              s          betx          bety            dx\n",
-       "qfa.0        2.2125       9.53142       4.10532   1.80855e-05\n",
-       "qfa.1        8.1525       12.3793       4.86072       2.47195\n",
-       "qfa.2       28.1175        12.995       4.44476       2.73962\n",
-       "qfa.3       34.0575       9.24421       4.54585   1.77093e-05\n",
-       "qfa.4       36.8325       9.53142       4.10532   1.80813e-05\n",
-       "qfa.5       42.7725       12.3793       4.86072       2.47195\n",
-       "qfa.6       62.7375        12.995       4.44476       2.73962\n",
-       "qfa.7       68.6775       9.24421       4.54585   1.77056e-05"
+       "qfa.0        2.2125       9.53153        4.1089  -1.01353e-05\n",
+       "qfa.1        8.1525       12.3957       4.85423       2.47328\n",
+       "qfa.2       28.1175       13.0141       4.43787       2.74102\n",
+       "qfa.3       34.0575       9.24355       4.54965  -9.93031e-06\n",
+       "qfa.4       36.8325       9.53153        4.1089  -1.01394e-05\n",
+       "qfa.5       42.7725       12.3957       4.85423       2.47328\n",
+       "qfa.6       62.7375       13.0141       4.43787       2.74102\n",
+       "qfa.7       68.6775       9.24355       4.54965  -9.93399e-06"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,19 +159,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "715fda34-d11c-4577-b3df-4b9e41302da0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = xt.load_madx_lattice('./PIMM.seq')                    # Load lattice\n",
-    "env.vars.load_madx('pimm_strengths.madx')                   # Load optics\n",
-    "env.ring.particle_ref = xt.Particles(kinetic_energy0=200e6) # Define ref. particle"
+    "env = xt.load('./PIMM.seq')          # Load lattice\n",
+    "env.vars.load('pimm_strengths.madx') # Load optics\n",
+    "env.ring.set_particle_ref('proton',kinetic_energy0=200e6) # Define ref. particle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "4fb3246f-da71-46c4-b91f-1fe270c3090c",
    "metadata": {},
    "outputs": [
@@ -197,7 +190,7 @@
        "qfa.8       72.5025       8.41509       5.92293     -0.288397"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "25354df1-58cf-4d31-9e62-3a0bc0f670b7",
    "metadata": {},
    "outputs": [
@@ -228,10 +221,10 @@
      "text": [
       "\n",
       "  ++++++++++++++++++++++++++++++++++++++++++++\n",
-      "  +     MAD-X 5.09.02  (64 bit, Darwin)      +\n",
+      "  +     MAD-X 5.09.03  (64 bit, Darwin)      +\n",
       "  + Support: mad@cern.ch, http://cern.ch/mad +\n",
-      "  + Release   date: 2024.04.18               +\n",
-      "  + Execution date: 2025.02.19 22:44:14      +\n",
+      "  + Release   date: 2024.04.25               +\n",
+      "  + Execution date: 2025.12.17 19:09:05      +\n",
       "  ++++++++++++++++++++++++++++++++++++++++++++\n",
       "! Based on CERN-PS-99-010-DI, TERA Foundation\n",
       "\n",
@@ -394,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eafe68eddf1e4259a6d04d362cd3ff1d",
+       "model_id": "67be65cc070e42f3a880ce926ff95b5b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -421,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "41947e3b-ccb5-449c-b06f-e83ed227b594",
    "metadata": {},
    "outputs": [
@@ -440,7 +433,7 @@
        "qfa.8       72.5025       8.41509       5.92293     -0.288397"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,14 +447,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7b59bc21-0914-4f19-a287-f87ebcb949c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed0dffa2-f566-41a4-aa2c-44d8777de408",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -483,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
