--- a/notebook_04_lhc_lossmap.ipynb
+++ b/notebook_04_lhc_lossmap.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f7f887ef-7c21-4af0-bb05-c12c4c10073b",
    "metadata": {},
    "outputs": [
@@ -342,6 +342,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "ld: warning: duplicate -rpath '/Users/giadarol/miniforge3/envs/py313/lib' ignored\n",
+      "ld: warning: duplicate -rpath '/Users/giadarol/miniforge3/envs/py313/lib' ignored\n",
       "ld: warning: duplicate -rpath '/Users/giadarol/miniforge3/envs/py313/lib' ignored\n",
       "ld: warning: duplicate -rpath '/Users/giadarol/miniforge3/envs/py313/lib' ignored\n"
      ]
@@ -363,10 +365,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9ed5b9b0-0057-402e-8b4c-bece282cb8f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lossmaps'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlossmaps\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlm\u001b[39;00m\n\u001b[32m      2\u001b[39m lmap = lm.SimulatedLossMap(lmtype=lm.LMType[\u001b[33m'\u001b[39m\u001b[33mB1H\u001b[39m\u001b[33m'\u001b[39m], machine=lm.Machine.LHC, energy=\u001b[32m6800\u001b[39m, particle=lm.Particle.PROTON)\n\u001b[32m      3\u001b[39m lmap.load_data_json(json_files=\u001b[33m'\u001b[39m\u001b[33mmylossmap.json\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'lossmaps'"
+     ]
+    }
+   ],
    "source": [
     "%%capture\n",
     "import lossmaps as lm\n",
@@ -376,10 +390,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bbac285b-b912-4900-9b1a-bcf61d1f6a64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Plot the loss map\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m _ = \u001b[43mlm\u001b[49m.plot_lossmap(lmap)\n",
+      "\u001b[31mNameError\u001b[39m: name 'lm' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Plot the loss map\n",
     "_ = lm.plot_lossmap(lmap)"
