Use matplotlib inline

--- a/notebook_05_formats.ipynb
+++ b/notebook_05_formats.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget"
+    "%matplotlib inline\n",
+    "# %matplotlib widget # for interactive"
    ]
   },
   {
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c5335d08-6120-4f36-84cb-58f3590e0abd",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a7582b10-408e-40f7-9922-7aa59cf6b0f6",
    "metadata": {},
    "outputs": [
@@ -72,7 +73,7 @@
        "qfa.7       68.6775        9.2449       4.54986    0.00131425"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9ef753b8-ade4-49b7-9bbc-443b59b00947",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dec2c50b2ef744da9252e2c38726468f",
+       "model_id": "80feba963b0f4756a491ce7abf0e6f3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3321a27c-fd25-4753-831f-f13a0bceed10",
    "metadata": {},
    "outputs": [
@@ -137,7 +138,7 @@
        "qfa.7       68.6775       9.24355       4.54965  -9.93399e-06"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "715fda34-d11c-4577-b3df-4b9e41302da0",
    "metadata": {},
    "outputs": [],
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "4fb3246f-da71-46c4-b91f-1fe270c3090c",
    "metadata": {},
    "outputs": [
@@ -190,7 +191,7 @@
        "qfa.8       72.5025       8.41509       5.92293     -0.288397"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "25354df1-58cf-4d31-9e62-3a0bc0f670b7",
    "metadata": {},
    "outputs": [
@@ -224,7 +225,7 @@
       "  +     MAD-X 5.09.03  (64 bit, Darwin)      +\n",
       "  + Support: mad@cern.ch, http://cern.ch/mad +\n",
       "  + Release   date: 2024.04.25               +\n",
-      "  + Execution date: 2025.12.17 19:09:05      +\n",
+      "  + Execution date: 2025.12.18 17:46:57      +\n",
       "  ++++++++++++++++++++++++++++++++++++++++++++\n",
       "! Based on CERN-PS-99-010-DI, TERA Foundation\n",
       "\n",
@@ -387,7 +388,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67be65cc070e42f3a880ce926ff95b5b",
+       "model_id": "3a4a6d6ff9a4483db90d069f7f71b07f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "41947e3b-ccb5-449c-b06f-e83ed227b594",
    "metadata": {},
    "outputs": [
@@ -433,7 +434,7 @@
        "qfa.8       72.5025       8.41509       5.92293     -0.288397"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
