--- a/notebook_02_slow_extraction.ipynb
+++ b/notebook_02_slow_extraction.ipynb
@@ -48,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "816d02a8574a4df99c43d5bc2d75f415",
+       "model_id": "06199d948c2b48a498e5f6103fcbc5f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,8 +61,8 @@
     }
    ],
    "source": [
-    "env = xt.Environment.from_json('./pimm_extr.json')\n",
-    "env.vars.load_json('./pimm_strengths.json')\n",
+    "env = xt.load('./pimm_extr.json')\n",
+    "env.vars.load('./pimm_strengths.json')\n",
     "\n",
     "line = env.ring\n",
     "line.configure_bend_model(num_multipole_kicks=5)\n",
@@ -166,7 +166,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x122b28190>"
+       "<matplotlib.legend.Legend at 0x1298c8190>"
       ]
      },
      "execution_count": 6,
