--- a/notebook_01_optics_matching.ipynb
+++ b/notebook_01_optics_matching.ipynb
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b5da7eba3294a8b9b0d4e4f84ab0db2",
+       "model_id": "95a0cbe5b83b4c528d780174d40d8557",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "env = xt.Environment.from_json('./pimm.json')\n",
+    "env = xt.load('./pimm.json')\n",
     "ring = env['ring']"
    ]
   },
@@ -176,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "<xtrack.twissplot.TwissPlot object at 0x14ee8dfd0>"
+       "<xtrack.twissplot.TwissPlot object at 0x12e8a5fd0>"
       ]
      },
      "execution_count": 8,
@@ -331,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "<xtrack.twissplot.TwissPlot object at 0x14f34b110>"
+       "<xtrack.twissplot.TwissPlot object at 0x12ee7b110>"
       ]
      },
      "execution_count": 14,
@@ -439,7 +439,7 @@
     {
      "data": {
       "text/plain": [
-       "<xtrack.twissplot.TwissPlot object at 0x14f34b250>"
+       "<xtrack.twissplot.TwissPlot object at 0x12ee7b250>"
       ]
      },
      "execution_count": 18,
